backend/k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kozyol-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kozyol
      tier: backend
  template:
    metadata:
      labels:
        app: kozyol
        tier: backend
        dummy: '4'
    spec:
      containers:
        - name: kozyol-backend
          image: saldin/kozyol_backend:latest
