backend/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kozyol-backend-service
spec:
  selector:
    app: kozyol
  ports:
    - protocol: TCP
      port: 8041
      targetPort: 8041
