backend/k8s/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kozyol-backend-tls-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: api.skazhi.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kozyol-backend-service
                port:
                  number: 8041
  tls:
    - secretName: kozyol-backend-tls
      hosts:
        - api.skazhi.be
